...
    // MARK: - View Components
    private var formFieldsSection: some View {
        VStack(alignment: .leading, spacing: 10) {
            CustomTextField(
                text: $viewModel.username,
                title: "Username",
                placeholder: "Enter your Username",
                icon: "person.fill"
            )
            
            CustomTextField(
                text: $viewModel.email,
                title: "Email",
                placeholder: "Enter your Email",
                icon: "envelope.fill",
                keyboardType: .emailAddress
            )
            
            CustomSecureField(
                text: $viewModel.password,
                title: "Password",
                placeholder: "Enter your Password",
                icon: "lock.fill",
                infoText: "Password must be at least 8 characters long and contain uppercase, lowercase, number, and special character."
            )
            
            CustomSecureField(
                text: $viewModel.confirmPassword,
                title: "Confirm Password",
                placeholder: "Confirm your Password",
                icon: "lock.shield.fill",
                infoText: "Please enter your password again to confirm it matches."
            )
            
            if let errorMessage = viewModel.errorMessage {
                Text(errorMessage)
...
                if viewModel.isLoading {
                    ProgressView()
                        .progressViewStyle(CircularProgressViewStyle())
                        .foregroundStyle(.white)
                        .scaleEffect(1.0)
                } else {
                    Text("Register")
                        .font(.headline)
                }
                Spacer()
            }
            .frame(maxWidth: .infinity)
            .padding()
...
    }
    
    private var loginLinkSection: some View {
        Button(action: {
            showLoginScreen = true
        }) {
            Text("Already have an account? Log in")
                .foregroundColor(.customAccent)
                .underline()
        }
        .navigationDestination(isPresented: $showLoginScreen) {
            LoginView(showLoginScreen: $showLoginScreen)
        }
...
